[gd_scene load_steps=8 format=2]

[ext_resource path="res://InteractiveItems/BaseScene/InteractiveScene.gd" type="Script" id=1]
[ext_resource path="res://InteractiveItems/BaseScene/textures/InteractiveItem.png" type="Texture" id=2]
[ext_resource path="res://InteractiveItems/BaseScene/textures/ctrl_prompt.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "broken"
tracks/0/type = "value"
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "working"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, -10 ) ]
}

[node name="InteractiveScene" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Item" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="ButtonTip" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/broken = SubResource( 3 )
anims/working = SubResource( 4 )

[node name="BreakDownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_InteractiveScene_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractiveScene_body_exited"]
[connection signal="timeout" from="BreakDownTimer" to="." method="_on_BreakDownTimer_timeout"]
